fixed overflow book cards

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: space-between;
   position: relative;
-  // height: 45vh;
+  height: 30rem;
   border-radius: 10px;
   border: solid;
   border-color: $greyscale-2;
